[B]1.1.3:[/B]
- Add live streams (thanks to Kuci)
[B]1.1.0:[/B]
Added Senzi.sk

[B]1.0.0:[/B]
Initial version